k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-webapp-service
  namespace: default
  labels:
    app: django-webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-webapp
